# notedeck

./: .gitignore  ARCHITECTURE.md  BRANDING.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SKILLS.md  STRATEGY.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts  vitest.e2e.config.ts
.github/ISSUE_TEMPLATE/: beta_tester.yml  bug_report.md
.github/workflows/: ci.yml  release.yml
.winget/: Hitalin.NoteDeck.installer.yaml  Hitalin.NoteDeck.locale.en-US.yaml  Hitalin.NoteDeck.locale.ja-JP.yaml  NotedeckDev.NoteDeck.installer.yaml  NotedeckDev.NoteDeck.locale.en-US.yaml  NotedeckDev.NoteDeck.locale.ja-JP.yaml  NotedeckDev.NoteDeck.yaml
packaging/aur/: PKGBUILD  notedeck.desktop
site/: index.html  main.js  style.css
src/: App.vue  bindings.ts  main.ts
src-tauri/: Cargo.toml  openapi.json  tauri.conf.json
src-tauri/android/: AndroidManifest.xml  MainActivity.kt
src-tauri/capabilities/: default.json
src-tauri/examples/: gen_openapi.rs
src-tauri/src/: account_service.rs  auth_service.rs  http_server.rs  lib.rs  os_notify.rs  permissions_gate.rs  query_bridge.rs  query_runtime.rs  streaming.rs
src-tauri/src/commands/: admin.rs  ai.rs  ai_chat.rs  auth.rs  content.rs  enrichment.rs  health.rs  heartbeat.rs  http.rs  messaging.rs  mod.rs  settings.rs  streaming.rs  timeline.rs  user.rs  utility.rs  vault.rs
src-tauri/src/ogp/: mod.rs
src-tauri/src/vault/: auth_inject.rs  backend.rs  connections_service.rs  connections_store.rs  error.rs  fetch.rs  keychain_backend.rs  mod.rs  model.rs  redaction.rs  ssrf.rs
src-tauri/tests/: bindings_snapshot.rs  openapi_snapshot.rs
src/adapters/: types.ts
src/adapters/misskey/: api.ts  query.ts  streaming.ts
src/aiscript/: api.test.ts  api.ts  events.test.ts  events.ts  notedeck-api.test.ts  notedeck-api.ts  plugin-api.test.ts  plugin-api.ts  ui.test.ts  ui.ts  validate.test.ts  validate.ts
src/aiscript/codemirror/: linter.ts
src/aiscript/lsp/: worker.ts
src/capabilities/: dispatcher.test.ts  dispatcher.ts  registry.test.ts  registry.ts  types.ts
src/capabilities/builtins/: account.test.ts  account.ts  ai.test.ts  ai.ts  chat.ts  (+54 more)
src/columns/: registry.ts
src/commands/: cliHandlers.test.ts  cliHandlers.ts  cliIcons.ts  cliParser.test.ts  definitions.test.ts  definitions.ts  quickPickProviders.test.ts  quickPickProviders.ts  registry.ts  taskCommands.test.ts  taskCommands.ts
src/components/: DevWelcome.vue
src/composables/: useAccountActions.ts  useAiChat.ts  useAiConfig.test.ts  useAiConfig.ts  useAiScriptRunner.ts  useAiSendLoop.test.ts  useAiSendLoop.ts  useAiSystemContext.test.ts  useAiSystemContext.ts  useAutocomplete.ts  useChatThread.test.ts  useChatThread.ts  useChatThreadPrefetch.ts  useChatVisibility.ts  useColumnDrag.ts  useColumnMount.dom.test.ts  useColumnMount.ts  useColumnSetup.ts  useCrossAccountNotes.ts  useDeckInit.ts  useDeckResume.dom.test.ts  useDeckResume.ts  useDeckWindow.ts  useDeepLink.ts  useDriveActions.test.ts  useDriveActions.ts  useDriveFilesByIds.ts  useDriveFolder.test.ts  useDriveFolder.ts  useFileAttachment.test.ts  useFileAttachment.ts  useGuide.test.ts  useGuide.ts  useHeartbeatDaemon.test.ts  useHeartbeatDaemon.ts  useHorizontalWheel.ts  useHoverPopup.ts  useKeyboardInset.ts  useLoginPrompt.ts  useMemos.ts  (+31 more)
src/core/: apiBridge.ts  queryDeltaBus.ts  server.ts  streamHealth.test.ts  streamHealth.ts
src/data/: connectionTemplates.ts  guideSteps.ts  tutorialSteps.ts
src/defaults/: ai.json5  keybindings.json5  performance.json5
src/permissions/: labels.test.ts  labels.ts  misskeyApiGate.test.ts  misskeyApiGate.ts  schema.ts  store.init.test.ts  store.sync.test.ts  store.test.ts  store.ts
src/router/: index.dom.test.ts  index.ts
src/services/: builtInSeed.test.ts  builtInSeed.ts  deckProfileCodec.test.ts  deckProfileCodec.ts  deckProfileFiles.ts  mapEviction.test.ts  mapEviction.ts  sidecarFileCollection.test.ts  sidecarFileCollection.ts  streamUpdateMerge.test.ts  streamUpdateMerge.ts
src/settings/: schema.ts
src/stores/: accounts.test.ts  accounts.ts  aiSessions.test.ts  aiSessions.ts  aiscriptLogs.test.ts  aiscriptLogs.ts  chatMessageStore.ts  confirm.test.ts  confirm.ts  deck.ts  deckProfile.ts  emojis.ts  instanceMutes.ts  keybinds.ts  misstore.test.ts  misstore.ts  mutes.ts  notes.ts  performance.ts  performanceData.ts  plugins.test.ts  plugins.ts  postForm.test.ts  postForm.ts  prompt.ts  recentEmojis.ts  renoteMutes.ts  servers.ts  settings.ts  skills.test.ts  skills.ts  streamInspector.ts  taskRunner.ts  tasks.ts  theme.ts  toast.ts  ui.ts  widgets.test.ts  widgets.ts  windows.test.ts  (+1 more)
src/styles/: _buttons.scss  _navMenu.scss  global.css
src/tasks/: resolveAccount.ts
src/theme/: applier.ts  compiler.ts
src/utils/: aiSessionTitle.ts  blurhashDataUrl.ts  buildPreviewNote.test.ts  buildPreviewNote.ts  cacheEviction.ts  caretPosition.ts  customTimelines.ts  debouncedPersist.test.ts  debouncedPersist.ts  errors.ts  followAction.test.ts  followAction.ts  highlight.ts  historyFs.ts  identity.test.ts  identity.ts  ime.ts  mfm.ts  mfmParser.ts  nyaize.test.ts  nyaize.ts  replyMentions.test.ts  replyMentions.ts  restrictedAccess.ts  settingsFs.ts  sleepDetector.test.ts  sleepDetector.ts  storage.ts  tauriEvents.ts  tauriInvoke.ts  toggleFollow.test.ts  toggleFollow.ts  url.ts  viewTransition.ts  windowUri.ts
src/views/: PipPage.vue
tests/adapters/: registry.test.ts
tests/composables/: useChatVisibility.test.ts  useNoteList.test.ts  useNoteVisibility.test.ts
tests/core/: apiBridge.test.ts  server.test.ts
tests/e2e/: api.test.ts  harness.ts
tests/stores/: accountRegistry.test.ts  accounts.test.ts  chatMessageStore.test.ts  mutes.test.ts  notes.test.ts  servers.test.ts  skills.test.ts  theme.test.ts
tests/theme/: compiler.test.ts
tests/utils/: aiSessionTitle.test.ts  customTimelines.test.ts  dedup.test.ts  errors.test.ts  fuzzyMatch.test.ts  highlight.test.ts  mfm.test.ts  regexSearch.test.ts  sortNotes.test.ts  timelineFilter.test.ts
(+165 files in other folders)
