[package]
name = "notedeck"
version = "1.20.1"
description = "Misskey Pro — integrated deck environment (IDE) for Misskey power users"
edition = "2021"
[dependencies]
notecli = { git = "https://github.com/notedeck-dev/notecli", rev = "186e85085b6e25534f92e97c4460ae0bd98edacf", features = ["specta"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = { version = "2", optional = true }
# 多重起動防止 (#642)。"deep-link" feature で 2 個目の argv 中の notedeck:// URL が
# deep-link プラグインの on_open_url に自動転送される
tauri-plugin-single-instance = { version = "2", features = ["deep-link"], optional = true }
tauri-plugin-window-state = { version = "2", optional = true }
tauri-plugin-autostart = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
bytes = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "0.0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
ulid = "1"
zeroize = "1"
secrecy = { version = "0.10", features = ["serde"] }
subtle = "2"
rand = "0.9"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "stream", "json"] }
url = "2"
sha2 = "0.10"
lru = "0.12"
regex = "1"
async-trait = "0.1"
mime_guess = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
base64 = "0.22"
encoding_rs = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-axum = "0.2"
tauri-plugin-os = "2"
tauri-plugin-haptics = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
kamadak-exif = "0.6.1"

# OS 通知のクリック遷移 (#754)。plugin-notification のデスクトップ実装は
# クリックイベント非対応 (上流 #2150) のため、Linux/Windows はこちらで表示する。
# macOS は署名済み bundle 必須のため対象外 (plugin 経路を維持)。
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
user-notify = "0.4.2"
# 通知画像の PNG 再エンコード用 (Windows toast は webp 非対応)。
# Linux では user-notify が同 crate を使うため追加コストなし
image = "0.25"

# ステータスバーのテーマ追従 (#755): MainActivity.setStatusBarStyle を JNI で呼ぶ
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["desktop"]
desktop = ["tauri/tray-icon", "dep:tauri-plugin-global-shortcut", "dep:tauri-plugin-autostart", "dep:tauri-plugin-updater", "dep:tauri-plugin-process", "dep:tauri-plugin-single-instance", "dep:tauri-plugin-window-state"]

[dev-dependencies]
tempfile = "3"
# MockRuntime (tauri::test) でイベントルーティングをユニットテストするため
tauri = { version = "2", features = ["test"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

# dev: 自分のコードは最速コンパイル、依存クレートだけ軽く最適化（実行速度とコンパイル速度のバランス）
[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[lib]
name = "notedeck_lib"
crate-type = ["lib", "cdylib", "staticlib"]
